MaryiaF/fix: on scrolling the markets some markets get hidden by hist… (#1218)
* MaryiaF/fix: on scrolling the markets some markets get hidden by historical data bar

* MaryiaF/fix: zoom out button is under the historical data mode on mobile version

--- a/sass/components/_navigation-widget.scss
+++ b/sass/components/_navigation-widget.scss
@@ -42,3 +42,7 @@
         }
     }
 }
+
+.smartcharts-mobile .sc-navigation-widget__item--indent {
+    margin-bottom: calc(10% - 1rem);
+}
